--- a/Ejercicio1Animaciones.htm
+++ b/Ejercicio1Animaciones.htm
@@ -1,6 +1,7 @@
 <html>
     <head>
         <meta charset="UTF-8">
+        <title>T4. Ejercicio 1</title>
         <style>
             div[id="0"]{
                 font-weight: bold;
