--- a/Ejercicio1Animaciones.htm
+++ b/Ejercicio1Animaciones.htm
@@ -26,6 +26,7 @@
 
             div{
                 width: 20%;
+                transition: all 1s;
                 
             }           
 
