--- a/Ejercicio2Animaciones.htm
+++ b/Ejercicio2Animaciones.htm
@@ -57,6 +57,7 @@
                 int1=setInterval(function(){
                     texto2.innerHTML="";
                     texto2.innerHTML=segundos;
+                    texto2.style.color="black";
                     if(segundos==0){
                         texto2.style.color="red";
                         clearInterval(int1);
