--- a/Ejercicio3Animaciones2.htm
+++ b/Ejercicio3Animaciones2.htm
@@ -39,6 +39,10 @@
             fadeIn(ele1,numero);
         }
         document.body.append(boton2);
+
+        document.body.append(document.createElement("br"));
+
+        document.body.append(document.createElement("div").innerHTML="La primera ejecución será instantánea, intentaré arreglarlo");
     </script>
 </body>
 </html>
