--- a/Práctica 4/Practica4.html
+++ b/Práctica 4/Practica4.html
@@ -1,19 +1,20 @@
 <html>
     <head>
         <link href="./Practica4.css" rel="stylesheet"/>
-        <title>Matapollos V.0</title>
+        <title>Matapollos</title>
         <script src="./Practica4.js"></script>
+        <script src="pollo.js"></script>
         <meta charset="UTF-8">
         <link rel="shortcut icon" href="./Imagenes/iconopollo.png" />
     </head>
     <body>
         <div id="contenedor">
-        <div id="titulo" onclick="document.querySelector('#texto').innerHTML=''">MataPollos V.0<img src="./Imagenes/iconopollo.png"></div>
+        <div id="titulo" onclick="document.querySelector('#texto').innerHTML=''">MataPollos V0.01<img src="./Imagenes/iconopollo.png"></div>
         <div id="menu">
             <boton-jugar onclick="jugar()"></boton-jugar>
             <button onclick="instrucciones()">Instrucciones</button>
             <button onclick="seleccionarDificultad()">Dificultad</button>
-            <button onclick="borrarTexto()">Conoce al creador</button>
+            <button onclick="mostrarInfo()">Conoce al creador</button>
         </div>
         <div id="texto">
         </div>
