--- a/Eduardo_Otayza_Práctica4/Eduardo_Otayza_Práctica4.html
+++ b/Eduardo_Otayza_Práctica4/Eduardo_Otayza_Práctica4.html
@@ -1,15 +1,15 @@
 <html>
     <head>
-        <link href="./Practica4.css" rel="stylesheet"/>
+        <link href="Eduardo_Otayza_Práctica4.css" rel="stylesheet"/>
         <title>Matapollos</title>
-        <script src="./Practica4.js"></script>
+        <script src="Eduardo_Otayza_Práctica4.js"></script>
         <script src="pollo.js"></script>
         <meta charset="UTF-8">
-        <link rel="shortcut icon" href="./Imagenes/iconopollo.png" />
+        <link rel="shortcut icon" href="./Multimedia/iconopollo.png" />
     </head>
     <body>
         <div id="contenedor">
-        <div id="titulo" onclick="document.querySelector('#texto').innerHTML=''">MataPollos V0.01<img src="./Imagenes/iconopollo.png"></div>
+        <div id="titulo" onclick="document.querySelector('#texto').innerHTML=''">MataPollos V0.01<img src="./Multimedia/iconopollo.png"></div>
         <div id="menu">
             <boton-jugar onclick="jugar()"></boton-jugar>
             <button onclick="instrucciones()">Instrucciones</button>
